<resources>
    <string name="app_name">Sistem Informasi Akademik</string>
    <string name="text_hello_world">Hello ProgMob 2020</string>
    <string name="Name">Nama</string>
    <string name="nim">Nim</string>
    <string name="alamat">Alamat</string>
    <string name="email">Email</string>
    <string name="oldNim">Nim Yang Dicari</string>
    <string name="newNama">Nama Baru</string>
    <string name="newNim">Nim Baru</string>
    <string name="newAlamat">Alamat Baru</string>
    <string name="newEmail">Email Baru</string>
    <string name="hapusMhs">Nim yang akan dihapus</string>
    <string name="password">Password</string>
    <string name="nama_dsn">Nama Dosen</string>
    <string name="nidn">Nidn</string>
    <string name="gelar">Gelar</string>
    <string name="nidn_cari">Nidn Yang Dicari</string>
    <string name="nama_dns_baru">Nama Dosen Baru</string>
    <string name="nidn_dns_baru">Nidn Baru</string>
    <string name="alamat_dsn_baru">Alamat Baru</string>
    <string name="Email_dns_baru">Email Baru</string>
    <string name="gelar_dns_baru">Gelar Dosen Baru</string>
    <string name="hapus_nidn">Nidn Yang Ingin Dihapus</string>
    <string name="nama_mtkl">Nama Matakuliah</string>
    <string name="kode">Kode Matakuliah</string>
    <string name="hari">Hari</string>
    <string name="sesi">Sesi</string>
    <string name="sks">Sks</string>
    <string name="nama_matkul_baru">Nama Matakuliah Baru</string>
    <string name="kode_matkul_baru">Kode Matakuliah Baru</string>
    <string name="Hari_matkul_baru">Hari Baru</string>
    <string name="sesi_matkul_baru">Sesi Baru</string>
    <string name="sks_matkul_baru">Sks Baru</string>
    <string name="kode_matkul_lama">Kode Matakuliah Lama</string>
    <string name="hapus_kode">Kode Yang Ingin Dihapus</string>
    <string name="username">Username</string>
</resources>